# scifisim

./: .envrc  .gitignore  Cargo.toml  scifisim.code-workspace  setup-venv.sh  solar.json
assets/models/: arrows.glb  marker-prograde.glb  output.gltf
assets/spice/: fetch.sh
examples/: tennis.rs
houdini/: arrows.glb  marker-prograde.glb  output.gltf  rocket.hiplc
script/: gen-ball.py  run.sh
sim-physics/: Cargo.toml
sim-physics/src/: attitude.rs  lib.rs
src/: main.rs  ship.rs  solar.rs  ui.rs
src/solar/: spice.rs
