[package]
name = "scifisim"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["sim-physics"]

[dependencies]
anyhow = "1.0.100"
bevy = "0.17.1"
nalgebra = { version = "0.34.1", features = ["serde-serialize"] }
rust-spice = "0.7.8"
serde = "1.0.228"
serde_cbor = "0.11.2"
serde_json = { version = "1.0.145", features = ["float_roundtrip"] }

sim-physics = { version = "0.1.0", path = "sim-physics" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[[example]]
name = "tennis"
path = "examples/tennis.rs"
